--- a/index.html
+++ b/index.html
@@ -5,18 +5,80 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Lucas Leal">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 
     <title>Agency - Jupiter X Templates</title>
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Nunito+Sans:opsz@6..12&display=swap"
+        rel="stylesheet">
 
     <link rel='icon' href='favicon.png' type='image/x-icon' sizes="32x32" />
 </head>
+
+
+<body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-md bg-light shadow-lg">
+        <div class="container-xl">
+            <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo2.png" height="60"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbar">
+                <ul class="navbar-nav align-items-end justify-content-lg-end ">
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/about-us.html">About Us</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Services
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Strategy Management</a>
+                            <a class="dropdown-item" href="#">Marketing Management</a>
+                            <a class="dropdown-item" href="#">Design & Development Service</a>
+                            <a class="dropdown-item" href="#">Social Media Management</a>
+                            <a class="dropdown-item" href="#">Brand Reputation Management</a>
+                            <a class="dropdown-item" href="#">Ad Purchasing Management</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/portfolios.html">Portfolios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/blog.html">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./pages/contact-us.html">Contact Us</a></li>
+                </ul>
+            </div>
+            
+
+            <div class="d-lg-flex justify-content-lg-end">
+                <button class="btn btn-primary">Buy JupiterX</button>
+            </div>
+        </div>
+    </nav>
+
+    <!-- HERO -->
+    <div class="container-f">
+        <h1 class="display-1 text-white font-weight-light text-center">
+            We are at your side with our <br>
+            Strategic Planning and Management
+        </h1>
+    </div>
+
+</body>
 
 </html>
