tentativa de estilizar o 'nav'...o inimigo agora é outro

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-md bg-light shadow-lg">
-        <div class="container-xl">
-            <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo2.png" height="60"></a>
+    <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
+        <div class="container-fluid">
+            <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
+            <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo2.png" class="img-fluid"
+                    alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbar">
+            <div class="collapse navbar-collapse justify-content-center" id="navbar">
                 <ul class="navbar-nav align-items-end justify-content-lg-end ">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/about-us.html">About Us</a></li>
@@ -63,7 +65,7 @@
                     <li class="nav-item"><a class="nav-link" href="./pages/contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
-            
+
 
             <div class="d-lg-flex justify-content-lg-end">
                 <button class="btn btn-primary">Buy JupiterX</button>
