--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <!-- Local CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Font Family -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Nunito+Sans:opsz@6..12&display=swap"
-        rel="stylesheet">
-
     <link rel='icon' href='favicon.png' type='image/x-icon' sizes="32x32" />
+
+    <script>
+        // Função para redirecionar para a página quando um item do dropdown é clicado
+        function redirectToPage(url) {
+            window.location.href = url;
+        }
+    </script>
 </head>
 
 
@@ -34,7 +35,7 @@
     <nav class="navbar navbar-expand-xxl bg-light shadow-lg">
         <div class="container-fluid">
             <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
-            <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo2.png" class="img-fluid"
+            <a class="navbar-brand" href="./index.html"><img src="../assets/img/logo2.png" class="img-fluid"
                     alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +46,8 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./pages/about-us.html">About Us</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="./pages/services.html"
+                            onclick="redirectToPage('./pages/services.html')" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Services
                         </a>
@@ -56,8 +58,6 @@
                             <a class="dropdown-item" href="#">Social Media Management</a>
                             <a class="dropdown-item" href="#">Brand Reputation Management</a>
                             <a class="dropdown-item" href="#">Ad Purchasing Management</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./pages/portfolios.html">Portfolios</a></li>
@@ -74,7 +74,7 @@
     </nav>
 
     <!-- HERO -->
-    <div class="container-f">
+    <div class="container-f" style="background-image: url('../assets/img/home-head.jpg');">
         <h1 class="display-1 text-white font-weight-light text-center">
             We are at your side with our <br>
             Strategic Planning and Management
