--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <title>Agency - Jupiter X Templates</title>
 
@@ -67,8 +68,8 @@
             </div>
 
 
-            <div class="d-lg-flex justify-content-lg-end">
-                <button class="btn btn-primary">Buy JupiterX</button>
+            <div class="d-lg-flex justify-content-lg-end ">
+                <button class="btn btn-primary classic_btn">Buy JupiterX</button>
             </div>
         </div>
     </nav>
@@ -81,6 +82,112 @@
         </h1>
     </div>
 
+    <!-- FOOTER -->
+    <div class="container">
+        <footer class="text-center text-lg-start text-muted">
+            <!-- Section: Social media -->
+
+            <section class="d-flex justify-content-center justify-content-lg-between p-4">
+                <!-- Left -->
+                <a class="navbar-brand" href="./index.html"><img src="../assets/img/logo2.png" class="img-fluid"
+                        alt="Logo"></a>
+                <!-- Left -->
+
+                <!-- Center -->
+                <ul class="nav col-md-6 justify-content-lg-end align-items-start">
+                    <li class="nav-item footer"><a class="nav-link footer" href="#">Home</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/services.html">Services</a>
+                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a>
+                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/blog.html">Blog</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a>
+                    </li>
+                </ul>
+                <!-- Center -->
+
+
+                <!-- Right -->
+                <div>
+                    <a href="" class="me-2 text-reset"><i class="bi bi-facebook"></i></a>
+                    <a href="" class="me-2 text-reset"><i class="bi bi-twitter"></i></a>
+                    <a href="" class="me-2 text-reset"><i class="bi bi-instagram"></i></a>
+                    <a href="" class="me-2 text-reset"><i class="bi bi-behance"></i></a>
+                    <a href="" class="me-2 text-reset"><i class="bi bi-github"></i></a>
+                </div>
+                <!-- Right -->
+            </section>
+            <!-- Section: Social media -->
+
+
+            <!-- Section: Links  -->
+            <section class="d-flex flex-wrap justify-content-center justify-content-lg-between">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="mb-4">We are Expanding Your Sales and Sectoral Brand
+                                Value.
+                                Work with us, get rid of ordinary methods.
+                            </h6>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                <br>
+                                <br>
+                                ©2019 Artbees Ltd. Jupiter X WordPress Theme Demo. All Rights Reserved.
+                            </p>
+                            <div class="d-lg-flex justify-content-lg-start">
+                                <button class="btn btn-primary classic_btn">Buy JupiterX</button>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="mb-4">Contact Us</h6>
+                            <p class="text">Phone. : +3 (427)-128-8671</p>
+                            <p class="text-reset">E-mail : support@artbees.net</p>
+                            <p class="text-reset">Address : 4589 Considine Overpass Apt. 915</p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-4 mx-auto mb-4">
+                            <!-- Content -->
+                            <h6 class="mb-4">Sign up for JupiterX newsletter and be informed
+                                about our latest updates
+                            </h6>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                            </p>
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" placeholder="Enter your email address">
+                                <button class="btn btn-primary rounded-end" type="button">
+                                    <i class="bi bi-arrow-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+            <p class="text-center text-body-secondary border-top pt-3 mt-3">&copy; 2019 ARTBEES. JUPITER
+                WORDPRESS THEME
+                DEMO. ALL RIGHTS RESERVED | Proudly Hosted by DigitalOcean </p>
+        </footer>
+    </div>
 </body>
 
 </html>
