footer added for all pages

--- a/index.html
+++ b/index.html
@@ -96,15 +96,11 @@
                 <!-- Center -->
                 <ul class="nav col-md-6 justify-content-lg-end align-items-start">
                     <li class="nav-item footer"><a class="nav-link footer" href="#">Home</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/about-us.html">About Us</a>
-                    </li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/services.html">Services</a>
-                    </li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a>
-                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/about-us.html">About Us</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/services.html">Services</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a></li>
                     <li class="nav-item footer"><a class="nav-link footer" href="./pages/blog.html">Blog</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a>
-                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a></li>
                 </ul>
                 <!-- Center -->
 
