--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -13,6 +13,7 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
     <title>Agency - Jupiter X Templates</title>
 
@@ -36,7 +37,7 @@
         <div class="container-fluid">
             <!-- <a class="navbar-brand" href="./index.html">Agency</a> -->
             <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo2.png" class="img-fluid"
-                alt="Logo"></a>
+                    alt="Logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                 aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
