about us from home page added

--- a/index.html
+++ b/index.html
@@ -82,6 +82,34 @@
         </h1>
     </div>
 
+    <!-- About Us -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row align-items-center g-5 py-5">
+            <div class="col-lg-6 text-center order-lg-2 order-sm-2"> <!-- A imagem é centralizada sempre -->
+                <img src="./assets/img/about.png" class="d-block mx-auto img-fluid" alt="Bootstrap Themes"
+                    style="width: 75%;" loading="lazy">
+            </div>
+            <div class="col-lg-6 text-lg-start text-center order-lg-1 order-sm-1"> <!-- Adicionamos classes condicionais para o texto -->
+                <h4 class="content text-uppercase pb-3">About Us</h4>
+                <h2 class="content fw-bold text-body-emphasis lh-1 mb-3 pb-3">We Create Market-Oriented Strategies for
+                    Your
+                    Brand with Expert Managers, Strategists, Product Designers, and Marketing Specialists</h2>
+                <p class="lead pb-5 content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident
+                </p>
+                <a href="#" style="text-decoration: none; color: var(--grey);">
+                    <h4 class="content">Work With Us</h4>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!-- FOOTER -->
     <div class="container">
         <footer class="text-center text-lg-start text-muted">
@@ -96,11 +124,15 @@
                 <!-- Center -->
                 <ul class="nav col-md-6 justify-content-lg-end align-items-start">
                     <li class="nav-item footer"><a class="nav-link footer" href="#">Home</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/about-us.html">About Us</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/services.html">Services</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/about-us.html">About Us</a>
+                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/services.html">Services</a>
+                    </li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a>
+                    </li>
                     <li class="nav-item footer"><a class="nav-link footer" href="./pages/blog.html">Blog</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a></li>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a>
+                    </li>
                 </ul>
                 <!-- Center -->
 
