services card grid added

--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@
                 <img src="./assets/img/about.png" class="d-block mx-auto img-fluid" alt="Bootstrap Themes"
                     style="width: 75%;" loading="lazy">
             </div>
-            <div class="col-lg-6 text-lg-start text-center order-lg-1 order-sm-1"> <!-- Adicionamos classes condicionais para o texto -->
+            <div class="col-lg-6 text-lg-start text-center order-lg-1 order-sm-1">
+                <!-- Adicionamos classes condicionais para o texto -->
                 <h4 class="content text-uppercase pb-3">About Us</h4>
                 <h2 class="content fw-bold text-body-emphasis lh-1 mb-3 pb-3">We Create Market-Oriented Strategies for
                     Your
                     Brand with Expert Managers, Strategists, Product Designers, and Marketing Specialists</h2>
-                <p class="lead pb-5 content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <p class="lead pb-5 content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -107,7 +109,53 @@
         </div>
     </div>
 
-
+    <!-- Services -->
+    <div class="container col-xxl-8 py-5 justify-content-center">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Adapted Card -->
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="./assets/img/services-1.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Strategy Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="./assets/img/services-2.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Marketing Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="./assets/img/services-3.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Design & Development Service</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- FOOTER -->
