--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <title>Agency - Jupiter X Templates</title>
 
@@ -89,7 +90,7 @@
                 <img src="./assets/img/about.png" class="d-block mx-auto img-fluid" alt="Bootstrap Themes"
                     style="width: 75%;" loading="lazy">
             </div>
-            <div class="col-lg-6 text-lg-start text-center order-lg-1 order-sm-1">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
                 <!-- Adicionamos classes condicionais para o texto -->
                 <h4 class="content text-uppercase pb-3">About Us</h4>
                 <h2 class="content fw-bold text-body-emphasis lh-1 mb-3 pb-3">We Create Market-Oriented Strategies for
@@ -156,6 +157,126 @@
             </div>
         </div>
     </div>
+    <div class="position-relative " style="background-color: #4183FF;">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row justify-content-between g-5 py-5 align-items-start">
+                <div class="col-lg-6 text-lg-start text-center text-white">
+                    <h2 class="content fw-bold lh-1 mb-3 pb-3">We are Expanding Your Sales and
+                        Sectoral Brand Value. Work with us, get rid of ordinary methods.</h2>
+                    <div class="container text-start">
+                        <div class="row row-cols-1 row-cols-md-2">
+                            <!-- Cards Responsivos -->
+                            <div class="col mb-4">
+                                <div class="card bg-transparent border-0">
+                                    <div class="card-body d-flex align-items-start">
+                                        <img src="./assets/svg/lead-generation.svg" class="me-3"
+                                            style="width: 73px; height: 73px;">
+                                        <div>
+                                            <h5 class="card-title text-white">Lead Generation</h5>
+                                            <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur
+                                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card bg-transparent border-0">
+                                    <div class="card-body d-flex align-items-start">
+                                        <img src="./assets/svg/target-audience-analysis.svg" class="me-3"
+                                            style="width: 73px; height: 73px;">
+                                        <div>
+                                            <h5 class="card-title text-white">Target Audience Analysis</h5>
+                                            <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur
+                                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card bg-transparent border-0">
+                                    <div class="card-body d-flex align-items-start">
+                                        <img src="./assets/svg/innovative-approaches.svg" class="me-3"
+                                            style="width: 73px; height: 73px;">
+                                        <div>
+                                            <h5 class="card-title text-white">Innovative Approaches</h5>
+                                            <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur
+                                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card bg-transparent border-0">
+                                    <div class="card-body d-flex align-items-start">
+                                        <img src="./assets/svg/data-security.svg" class="me-3"
+                                            style="width: 73px; height: 73px;">
+                                        <div>
+                                            <h5 class="card-title text-white">Data Security Consultancy</h5>
+                                            <p class="card-text text-white">Lorem ipsum dolor sit amet, consectetur
+                                                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                                magna</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 order-lg-2 order-sm-2 d-none d-md-none d-lg-block text-center" style="position: relative; z-index: 1;">
+                    <h5 class="card-title text-white mb-4">Work With Us</h5>
+                    <img src="./assets/img/phone.png" class="img-fluid mt-4 shadow-lg mx-auto d-block" style="max-height: 1000px;" alt="Phone Image">
+                </div>              
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Customers -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row align-items-center g-5 py-5">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <h4 class="content text-uppercase pb-3">Our Customers</h4>
+                <h2 class="content fw-bold text-body-emphasis lh-1 mb-3 pb-3">Our Customers Who Prefer Us on Brand
+                    Management and Strategic Consulting
+                </h2>
+                <p class="lead content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident
+                </p>
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-2 align-items-md-start">
+            <div class="col border-end">
+                <div class="row row-cols-2 row-cols-md-3 row-cols-sm-1 g-4">
+                    <img src="./assets/img/Artboard-Copy-2.png" class="img-fluid w-180">
+                    <img src="./assets/img/Artboard-Copy-3.png" class="img-fluid w-180">
+                    <img src="./assets/img/Artboard-Copy-4.png" class="img-fluid w-180">
+                    <img src="./assets/img/Artboard-Copy-5.png" class="img-fluid w-180">
+                    <img src="./assets/img/Artboard-Copy-6.png" class="img-fluid w-180">
+                    <img src="./assets/img/Artboard-Copy-7.png" class="img-fluid w-180">
+                </div>
+            </div>
+
+            <div class="col d-flex flex-column align-items-start gap-2">
+                <h6 class="content">We have Certificates of Marketing Partners in Google, Facebook, Shopify</h6>
+
+                <button type="button" class="btn btn- w-50 mb-3 mx-auto mt-3">
+                    <i class="bi bi-google fs-4"></i> Google Ads
+                </button>
+
+                <button type="button" class="btn btn-scondary w-50 mx-auto">
+                    <i class="bi bi-facebook fs-4"></i> Facebook
+                </button>
+            </div>
+        </div>
+
+
+    </div>
 
 
     <!-- FOOTER -->
@@ -179,7 +300,8 @@
                     <li class="nav-item footer"><a class="nav-link footer" href="./pages/portfolios.html">Portfolios</a>
                     </li>
                     <li class="nav-item footer"><a class="nav-link footer" href="./pages/blog.html">Blog</a></li>
-                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact Us</a>
+                    <li class="nav-item footer"><a class="nav-link footer" href="./pages/contact-us.html">Contact
+                            Us</a>
                     </li>
                 </ul>
                 <!-- Center -->
