--- a/index.html
+++ b/index.html
@@ -225,10 +225,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 order-lg-2 order-sm-2 d-none d-md-none d-lg-block text-center" style="position: relative; z-index: 1;">
+                <div class="col-lg-6 order-lg-2 order-sm-2 d-none d-md-none d-lg-block text-center"
+                    style="position: relative; z-index: 1;">
                     <h5 class="card-title text-white mb-4">Work With Us</h5>
-                    <img src="./assets/img/phone.png" class="img-fluid mt-4 shadow-lg mx-auto d-block" style="max-height: 1000px;" alt="Phone Image">
-                </div>              
+                    <img src="./assets/img/phone.png" class="img-fluid mt-4 shadow-lg mx-auto d-block"
+                        style="max-height: 1000px;" alt="Phone Image">
+                </div>
             </div>
         </div>
     </div>
@@ -278,6 +280,94 @@
 
     </div>
 
+    <!-- Testimonials -->
+    <div class="testimonials">
+        <div class="container  col-xxl-8 py-5 justify-content-center">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <!-- Adicionamos classes condicionais para o texto -->
+                <h4 class="content text-uppercase pb-3">Testimonials</h4>
+                <h2 class="content lh-1 mb-3 pb-3 text-">What have changed in business life after our
+                    customers started working with us?</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="nav nav-tabs border-0" id="myTabs" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active border-0 text-center" id="customer1-tab" data-bs-toggle="tab" href="#customer1" role="tab" aria-controls="customer1" aria-selected="true">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 1
+                            </a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link text-center" id="customer2-tab" data-bs-toggle="tab" href="#customer2" role="tab" aria-controls="customer2" aria-selected="false">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 2
+                            </a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link text-center" id="customer3-tab" data-bs-toggle="tab" href="#customer3" role="tab" aria-controls="customer3" aria-selected="false">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 3
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content mt-4" id="myTabsContent">
+                        <div class="tab-pane fade show active" id="customer1" role="tabpanel"
+                            aria-labelledby="customer1-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="./assets/img/customer-1.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my beauty center, I
+                                        chose
+                                        to work with JupiterX and now I see that I have made the right decision. In the
+                                        first half of the year, I grew by 21% and almost doubled the turnover in the
+                                        first
+                                        half of the year and this is a great success.</p>
+                                    <p class="lead"><strong>Dorothy Colon</strong><br>Beauty Salon Manager</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="customer2" role="tabpanel" aria-labelledby="customer2-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="./assets/img/customer-2.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my agency, I chose to
+                                        work
+                                        with JupiterX and now I see that I have made the right decision. In the first
+                                        half
+                                        of the year, I grew by 21% and almost doubled the turnover in the first half of
+                                        the
+                                        year and this is a great success.</p>
+                                    <p class="lead"><strong>Nick Matthew</strong><br>Web Designer</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="customer3" role="tabpanel" aria-labelledby="customer3-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="./assets/img/customer-3.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my agency, I chose to
+                                        work
+                                        with JupiterX and now I see that I have made the right decision. In the first
+                                        half
+                                        of the year, I grew by 21% and almost doubled the turnover in the first half of
+                                        the
+                                        year and this is a great success.</p>
+                                    <p class="lead"><strong>Laura Massaro</strong><br>Graphic Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <div class="container">
