--- a/index.html
+++ b/index.html
@@ -293,17 +293,20 @@
                 <div class="col-md-12">
                     <ul class="nav nav-tabs border-0" id="myTabs" role="tablist">
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link active border-0 text-center" id="customer1-tab" data-bs-toggle="tab" href="#customer1" role="tab" aria-controls="customer1" aria-selected="true">
+                            <a class="nav-link active border-0 text-center" id="customer1-tab" data-bs-toggle="tab"
+                                href="#customer1" role="tab" aria-controls="customer1" aria-selected="true">
                                 <i class="bi bi-person" aria-hidden="true"></i><br> Customer 1
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link text-center" id="customer2-tab" data-bs-toggle="tab" href="#customer2" role="tab" aria-controls="customer2" aria-selected="false">
+                            <a class="nav-link text-center" id="customer2-tab" data-bs-toggle="tab" href="#customer2"
+                                role="tab" aria-controls="customer2" aria-selected="false">
                                 <i class="bi bi-person" aria-hidden="true"></i><br> Customer 2
                             </a>
                         </li>
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link text-center" id="customer3-tab" data-bs-toggle="tab" href="#customer3" role="tab" aria-controls="customer3" aria-selected="false">
+                            <a class="nav-link text-center" id="customer3-tab" data-bs-toggle="tab" href="#customer3"
+                                role="tab" aria-controls="customer3" aria-selected="false">
                                 <i class="bi bi-person" aria-hidden="true"></i><br> Customer 3
                             </a>
                         </li>
@@ -367,6 +370,57 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <!-- Our Blog -->
+    <div class="testimonials">
+        <div class="container  col-xxl-8 py-5 justify-content-center">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <!-- Adicionamos classes condicionais para o texto -->
+                <h4 class="content text-uppercase pb-3">Our Blog</h4>
+                <h2 class="content lh-1 mb-3 pb-3 text-">We share the latest developments in the digital
+                    world and the innovations of our company</h2>
+            </div>
+        <!-- </div>
+    </div> -->
+
+    <!-- <div class="container-fluid"> -->
+        <!-- <div class="container  col-xxl-8 py-5 justify-content-center"> -->
+
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                    <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card-body page-content flex-grow-1">
+                        <h5 class="card-title">Artbees’ Experience of WordCamp Milano: The Culture of Giving in
+                            WordPress</h5>
+                        <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                    <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card-body page-content flex-grow-1">
+                        <h5 class="card-title">What is a WordCamp and What Was Artbees’ Takeaways From WordCamp
+                            Thessaloniki 2018</h5>
+                        <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                <div class="card d-flex flex-column" style="padding: 20px; height: 100%;">
+                    <img src="./assets/img/blog3.jpg" class="card-img-top">
+                    <div class="card-body page-content flex-grow-1">
+                        <h5 class="card-title">Show Your Audience What’s on the Horizon: FREE Coming Soon PSD Webpage
+                            Template</h5>
+                        <p class="card-text"><small class="text-body-secondary">March 2, 2019</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     </div>
 
     <!-- FOOTER -->
