--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -97,7 +97,8 @@
                 </div>
                 <div class="col-lg-6 text-lg-start">
                     <h2 class="content lh-1 mb-3 pb-3">Our Vision & Mision</h2>
-                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
@@ -105,7 +106,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <!-- About Us -->
