applied to services

--- a/pages/services.html
+++ b/pages/services.html
@@ -81,6 +81,238 @@
         </h1>
     </div>
 
+    <!-- What We Do -->
+    <div class="testimonials">
+        <div class="container col-xxl-8 py-5">
+            <div class="row justify-content-start align-items-">
+                <h4 class="content text-uppercase pb-3">WHAT WE DO</h4>
+                <div class="col-lg-6 text-lg-start text-start">
+                    <h2 class="content lh-1 mb-3 pb-3 text-">We are Expanding Your Sales and Sectoral Brand Value. Work
+                        with us, get rid of ordinary methods.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+                </div>
+                <div class="col-lg-6 text-lg-end">
+                    <h2 class="content lh-1 mb-3 pb-3">Work With Us</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Services -->
+    <div class="container col-xxl-8 py-5 justify-content-center">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Adapted Card -->
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-1.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Strategy Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-2.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Marketing Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-3.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Design & Development Service</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Adapted Card -->
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-4.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Social Media Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-5.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Brand Reputation Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mb-4">
+                    <div class="card h-100 border-0">
+                        <a href="#"><img src="../assets/img/services-6.jpg" class="card-img-top img-fluid card-img"
+                                alt="Card Image"></a>
+                        <div class="card-body p-0">
+                            <h5 class="card-title pt-4">Ad Purchasing Management</h5>
+                            <p class="card-text pt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Blue div -->
+    <div class="container-fluid bg-primary text-white pt-5 pb-5">
+        <div class="container-fluid col-xxl-8 py-5">
+            <div class="row justify-content-start align-items-">
+                <div class="col-lg-6 text-lg-start text-start">
+                    <h2 class="content lh-1 mb-3 pb-3 text-">We are Expanding Your Sales and Sectoral Brand Value. Work
+                        with us, get rid of
+                        ordinary methods.</h2>
+                </div>
+                <div class="col-lg-6 text-lg-end">
+                    <p class="content lh-1 mb-3 pb-3">Work With Us</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Elements -->
+    <div class="container-fluid col-xxl-8 py-5">
+        <div class="row justify-content-start align-items-">
+            <div class="col-lg-6 text-lg-start text-start">
+                <p class="content lh-1 mb-3 pb-3">ELEMENTS</p>
+                <h2 class="content fw-bold lh-1 mb-3 pb-3 text-">You will move your business forward thanks
+                    to our facilities we offer to our customers</h2>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Testimonials -->
+    <div class="testimonials">
+        <div class="container  col-xxl-8 py-5 justify-content-center">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <!-- Adicionamos classes condicionais para o texto -->
+                <h4 class="content text-uppercase pb-3">Testimonials</h4>
+                <h2 class="content lh-1 mb-3 pb-3 text-">What have changed in business life after our
+                    customers started working with us?</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="nav nav-tabs border-0" id="myTabs" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link active border-0 text-center" id="customer1-tab" data-bs-toggle="tab"
+                                href="#customer1" role="tab" aria-controls="customer1" aria-selected="true">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 1
+                            </a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link text-center" id="customer2-tab" data-bs-toggle="tab" href="#customer2"
+                                role="tab" aria-controls="customer2" aria-selected="false">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 2
+                            </a>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <a class="nav-link text-center" id="customer3-tab" data-bs-toggle="tab" href="#customer3"
+                                role="tab" aria-controls="customer3" aria-selected="false">
+                                <i class="bi bi-person" aria-hidden="true"></i><br> Customer 3
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="tab-content mt-4" id="myTabsContent">
+                        <div class="tab-pane fade show active" id="customer1" role="tabpanel"
+                            aria-labelledby="customer1-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="../assets/img/customer-1.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my beauty center, I
+                                        chose
+                                        to work with JupiterX and now I see that I have made the right decision. In the
+                                        first half of the year, I grew by 21% and almost doubled the turnover in the
+                                        first
+                                        half of the year and this is a great success.</p>
+                                    <p class="lead"><strong>Dorothy Colon</strong><br>Beauty Salon Manager</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="customer2" role="tabpanel" aria-labelledby="customer2-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="../assets/img/customer-2.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my agency, I chose to
+                                        work
+                                        with JupiterX and now I see that I have made the right decision. In the first
+                                        half
+                                        of the year, I grew by 21% and almost doubled the turnover in the first half of
+                                        the
+                                        year and this is a great success.</p>
+                                    <p class="lead"><strong>Nick Matthew</strong><br>Web Designer</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="customer3" role="tabpanel" aria-labelledby="customer3-tab">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="../assets/img/customer-3.png" class="img-fluid" alt="Customer 1">
+                                </div>
+                                <div class="col-md-6">
+                                    <p class="lead">In order to increase the customer capacity of my agency, I chose to
+                                        work
+                                        with JupiterX and now I see that I have made the right decision. In the first
+                                        half
+                                        of the year, I grew by 21% and almost doubled the turnover in the first half of
+                                        the
+                                        year and this is a great success.</p>
+                                    <p class="lead"><strong>Laura Massaro</strong><br>Graphic Designer</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- FOOTER -->
     <div class="container">
         <footer class="text-center text-lg-start text-muted">
