--- a/pages/portfolios.html
+++ b/pages/portfolios.html
@@ -81,6 +81,82 @@
         </h1>
     </div>
 
+    <!-- WHY WORK WITH US? -->
+    <div class="">
+        <div class="container col-xxl-8 px-4 py-5">
+            <div class="row flex-lg-row justify-content-start align-items-start">
+                <h4 class="content text-uppercase pb-3">WHY WORK WITH US?</h4>
+                <div class="col-lg-6 text-lg-start text-start border-end">
+                    <h2 class="content lh-1 mb-3 pb-3 text-">Our Customers Who Prefer Us on Brand
+                        Management and Strategic Consulting</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                            esse
+                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+                </div>
+
+                <div class="col d-flex flex-column align-items-center text-center">
+                    <h6 class="content">We have Certificates of Marketing Partners in Google, Facebook, Shopify</h6>
+
+                    <button type="button" class="btn btn- w-50 mb-3 mx-auto mt-3">
+                        <i class="bi bi-google fs-4"></i> Google Ads
+                    </button>
+
+                    <button type="button" class="btn btn-scondary w-50 mx-auto">
+                        <i class="bi bi-facebook fs-4"></i> Facebook
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Customers -->
+    <div class="container col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row align-items-center g-5 py-5">
+            <div class="col-lg-6 text-lg-start text-start order-lg-1 order-sm-1">
+                <h4 class="content text-uppercase pb-3">Our Customers</h4>
+                <h2 class="content fw-bold text-body-emphasis lh-1 mb-3 pb-3">Our Customers Who Prefer Us on Brand
+                    Management and Strategic Consulting
+                </h2>
+                <p class="lead content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                    reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident
+                </p>
+            </div>
+        </div>
+
+        <div class="row row-cols-1 row-cols-md-2 align-items-md-start">
+            <div class="col border-end">
+                <div class="row row-cols-2 row-cols-md-3 row-cols-sm-1 g-4">
+                    <img src="../assets/img/Artboard-Copy-2.png" class="img-fluid w-180">
+                    <img src="../assets/img/Artboard-Copy-3.png" class="img-fluid w-180">
+                    <img src="../assets/img/Artboard-Copy-4.png" class="img-fluid w-180">
+                    <img src="../assets/img/Artboard-Copy-5.png" class="img-fluid w-180">
+                    <img src="../assets/img/Artboard-Copy-6.png" class="img-fluid w-180">
+                    <img src="../assets/img/Artboard-Copy-7.png" class="img-fluid w-180">
+                </div>
+            </div>
+
+            <div class="col d-flex flex-column align-items-start gap-2">
+                <h6 class="content">We have Certificates of Marketing Partners in Google, Facebook, Shopify</h6>
+
+                <button type="button" class="btn btn- w-50 mb-3 mx-auto mt-3">
+                    <i class="bi bi-google fs-4"></i> Google Ads
+                </button>
+
+                <button type="button" class="btn btn-scondary w-50 mx-auto">
+                    <i class="bi bi-facebook fs-4"></i> Facebook
+                </button>
+            </div>
+        </div>
+    </div>
+
     <!-- FOOTER -->
     <div class="container">
         <footer class="text-center text-lg-start text-muted">
